--- a/module1-decision-trees/LS_DS_221_assignment.ipynb
+++ b/module1-decision-trees/LS_DS_221_assignment.ipynb
@@ -546,6 +546,7 @@
     }
    ],
    "source": [
+    "\n",
     "X_train"
    ]
   },
@@ -714,6 +715,29 @@
    "source": [
     "#('feature_selection', SelectFromModel(LinearSVC(penalty=\"l1\")))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "6.67 ns ± 0.217 ns per loop (mean ± std. dev. of 7 runs, 100000000 loops each)\n"
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "2*2323432"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
