--- a/module3-cross-validation/LS_DS_223_assignment.ipynb
+++ b/module3-cross-validation/LS_DS_223_assignment.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,10 +124,226 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "((59400, 41), (14358, 40))"
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "source": [
+    "train.shape, test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#wrangle\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "def wrangle(X):\n",
+    "    #stop copy warning\n",
+    "    X = X.copy()\n",
+    "    X['latitude'] = X['latitude'].replace(-2e-08, 0)\n",
+    "    #replace zero in missing \n",
+    "    cols_with_zeros = ['longitude','latitude','construction_year',\n",
+    "    'gps_height', 'population']\n",
+    "\n",
+    "    for col in cols_with_zeros:\n",
+    "        X[col] = X[col].replace(0, np.nan)\n",
+    "    #Drop duplacte columns\n",
+    "    duplicate = ['quantity_group', 'payment_type']\n",
+    "    X = X.drop(columns=duplicate)\n",
+    "    #Drop drop random ids\n",
+    "    random_id = ['recorded_by', 'id']\n",
+    "    #convert data_recorded to datetime\n",
+    "    X['date_recorded'] = pd.to_datetime(X['date_recorded'], infer_datetime_format=True)\n",
+    "    #Extract components from date_recorded, teh drop the original column\n",
+    "    X['year_recorded'] = X['date_recorded'].dt.year\n",
+    "    X['month_recorded'] = X['date_recorded'].dt.month\n",
+    "    X['day_recorded'] = X['date_recorded'].dt.day\n",
+    "    X = X.drop(columns='date_recorded')\n",
+    "    #Engineer feature: how many years from construction_year to date_recorded\n",
+    "    X['years'] = X['year_recorded'] - X['construction_year']\n",
+    "    return X\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train = wrangle(train)\n",
+    "test = wrangle(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target = 'status_group'\n",
+    "train_features = train.drop(columns=[target])\n",
+    "numeric_features = train_features.select_dtypes(include='number').columns.tolist()\n",
+    "cardinality = train_features.select_dtypes(exclude='number').nunique()\n",
+    "categorical_features = cardinality[cardinality<=50].index.tolist()\n",
+    "features = numeric_features + categorical_features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = train[features]\n",
+    "y_train = train[target]\n",
+    "X_test = test[features]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Wall time: 2.15 s\n"
+    }
+   ],
+   "source": [
+    "\n",
+    "%%time\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "import category_encoders as ce\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "\n",
+    "pipeline = make_pipeline(\n",
+    "    ce.OrdinalEncoder(), \n",
+    "    SimpleImputer(strategy='median'), \n",
+    "    StandardScaler(),\n",
+    "    RandomForestClassifier(n_jobs=-1, random_state=0)\n",
+    ")\n",
+    "\n",
+    "#Fit on train\n",
+    "#pipeline.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV, RandomizedSearchCV\n",
+    "from scipy.stats import randint, uniform\n",
+    "\n",
+    "param_distributions = {\n",
+    "    #'simpleimputer__stategy': ['mean', 'median'], \n",
+    "\n",
+    "    #do range instead of randint\n",
+    "    'randomforestclassifier__n_estimators': randint(50,500),\n",
+    "    'randomforestclassifier__max_depth': [None],\n",
+    "    'randomforestclassifier__max_features': [None],\n",
+    "    #'randomforestclassifier__min_samples_split': [2],\n",
+    "    #'randomforestclassifier__min_samples_leaf': [4],\n",
+    "    'randomforestclassifier__min_impurity_split': [None]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "search = RandomizedSearchCV(\n",
+    "    pipeline,\n",
+    "    param_distributions = param_distributions,\n",
+    "    n_iter= 10,\n",
+    "    cv = 3,\n",
+    "    scoring='accuracy',\n",
+    "    verbose=10,\n",
+    "    return_train_score=True,\n",
+    "    n_jobs = -1\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Fitting 3 folds for each of 10 candidates, totalling 30 fits\n[Parallel(n_jobs=-1)]: Using backend LokyBackend with 12 concurrent workers.\n[Parallel(n_jobs=-1)]: Done   1 tasks      | elapsed:  3.2min\n[Parallel(n_jobs=-1)]: Done  11 out of  30 | elapsed:  3.9min remaining:  6.8min\n[Parallel(n_jobs=-1)]: Done  15 out of  30 | elapsed:  4.2min remaining:  4.2min\n[Parallel(n_jobs=-1)]: Done  19 out of  30 | elapsed:  5.0min remaining:  2.9min\n[Parallel(n_jobs=-1)]: Done  23 out of  30 | elapsed:  5.6min remaining:  1.7min\n[Parallel(n_jobs=-1)]: Done  27 out of  30 | elapsed:  6.8min remaining:   45.0s\n[Parallel(n_jobs=-1)]: Done  30 out of  30 | elapsed:  7.0min finished\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "RandomizedSearchCV(cv=3, error_score=nan,\n                   estimator=Pipeline(memory=None,\n                                      steps=[('ordinalencoder',\n                                              OrdinalEncoder(cols=None,\n                                                             drop_invariant=False,\n                                                             handle_missing='value',\n                                                             handle_unknown='value',\n                                                             mapping=None,\n                                                             return_df=True,\n                                                             verbose=0)),\n                                             ('simpleimputer',\n                                              SimpleImputer(add_indicator=False,\n                                                            copy=True,\n                                                            fill_value=None,\n                                                            missing_values=nan,\n                                                            strategy='median',\n                                                            verbose=...\n                   param_distributions={'randomforestclassifier__max_depth': [None],\n                                        'randomforestclassifier__max_features': [None],\n                                        'randomforestclassifier__min_impurity_split': [None],\n                                        'randomforestclassifier__n_estimators': <scipy.stats._distn_infrastructure.rv_frozen object at 0x0000018353E77048>},\n                   pre_dispatch='2*n_jobs', random_state=None, refit=True,\n                   return_train_score=True, scoring='accuracy', verbose=10)"
+     },
+     "metadata": {},
+     "execution_count": 25
+    }
+   ],
+   "source": [
+    "search.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "0.7999999999999999"
+     },
+     "metadata": {},
+     "execution_count": 26
+    }
+   ],
+   "source": [
+    "search.best_score_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = search.best_estimator_.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submission = sample_submission.copy()\n",
+    "submission['status_group'] = y_pred\n",
+    "submission.to_csv('pkd97.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
@@ -146,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.6-final"
   }
  },
  "nbformat": 4,
